[package]
name = "ikigai-jsonld"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
description = "JSON-LD operators for ikigai — urn:jsonld:expand / :compact / :flatten as resources, on the json-ld crate with a static (no-network) context loader. Standalone, lazy-loadable as a WASM module."
repository = "https://github.com/ikigai-rs/ikigai-jsonld"
homepage = "https://github.com/ikigai-rs/ikigai-jsonld"
keywords = ["ikigai", "roc", "json-ld", "rdf", "linked-data"]
categories = ["web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ikigai-core = "0.1.26"
json-ld = { version = "0.21", default-features = false }
contextual = "0.1.6"
pollster = "0.3"
