[package]
name = "ikigai-jsonld"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
description = "JSON-LD operators for ikigai — urn:jsonld:expand / :compact / :flatten as resources, on the json-ld crate with a static (no-network) context loader. Standalone, lazy-loadable as a WASM module."
repository = "https://github.com/ikigai-rs/ikigai-jsonld"
homepage = "https://github.com/ikigai-rs/ikigai-jsonld"
keywords = ["ikigai", "roc", "json-ld", "rdf", "linked-data"]
categories = ["web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ikigai-core = "0.1.26"
json-ld = { version = "0.21", default-features = false }
contextual = "0.1.6"
futures = "0.3"

# The `module` feature turns this library into a standalone lazy-loadable WASM module via
# `ikigai_module::wasm_module!` — a host can fetch `ikigai_jsonld.wasm` and resolve
# `urn:jsonld:*` against it, keeping the heavy json-ld tree out of the host's wasm. Optional
# + behind the feature, so a native/linked consumer never pulls wasm-bindgen et al.
[dependencies.ikigai-module]
version = "0.1.6"
optional = true
[dependencies.wasm-bindgen]
version = "=0.2.108"
optional = true
[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true
[dependencies.js-sys]
version = "0.3"
optional = true
[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
# cargo build --release --lib --features module --target wasm32-unknown-unknown
module = [
    "dep:ikigai-module",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:console_error_panic_hook",
]

[dev-dependencies]
futures = "0.3"
